<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FUNDO"
    tools:context=".RegisterPage">

    <Button
        android:id="@+id/button6"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="146dp"
        android:layout_height="38dp"
        android:background="@color/white"
        android:backgroundTint="#EAE6E6"
        android:text="@string/Save"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="753dp" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:backgroundTint="#EAE6E6"
        android:text="@string/Return"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="100dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="220dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Last_name"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="331dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date_of_Birth"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="368dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Telefone_number"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gender"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="452dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Education"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="486dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Experience"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="525dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_me"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="562dp" />

</androidx.constraintlayout.widget.ConstraintLayout>