<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FUNDO"
    tools:context=".CreateYourAccount">

    <Button
        android:id="@+id/button19"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:background="@color/white"
        android:backgroundTint="@color/Beige"
        android:text="@string/REGISTER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CREATE_YOUR"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="219dp" />

    <Button
        android:id="@+id/button20"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="146dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="200dp"
        android:background="@color/white"
        android:backgroundTint="#EAE6E6"
        android:text="@string/Return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Username"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="307dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EMAIL"
        android:inputType="@string/EMAIL"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="365dp" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PASSWORD"
        android:inputType="@string/PASSWORD"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="428dp" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CONFIRMAR_PASS"
        android:inputType="@string/CONFIRMAR_PASS"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="496dp" />

</androidx.constraintlayout.widget.ConstraintLayout>