<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ProfileSettings"
    tools:layout_editor_absoluteX="-37dp"
    tools:layout_editor_absoluteY="-248dp">

    <Button
        android:id="@+id/button10"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:background="@color/white"
        android:backgroundTint="@color/Beige"
        android:text="@string/logout"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="513dp" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:background="@color/white"
        android:backgroundTint="@color/Beige"
        android:text="@string/my_experience"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="440dp" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:background="@color/white"
        android:backgroundTint="@color/Beige"
        android:text="@string/my_Rate"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="389dp" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:background="@color/white"
        android:backgroundTint="@color/Beige"
        android:text="@string/my_Calendar"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="321dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="36dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jane Doe"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lisbon, PT"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile Settings"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="205dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile Is On"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="269dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="268dp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="304dp" />

    <View
        android:id="@+id/divider5"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="374dp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="439dp" />

    <View
        android:id="@+id/divider7"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="499dp" />

</androidx.constraintlayout.widget.ConstraintLayout>